@@ -5,7 +5,13 @@
 ## General information and software requirements
 The repo is built around the main [makefile](https://en.wikipedia.org/wiki/Makefile) which contains all recipes to build the figures from the paper.
 
-- `TODO:` software requirements
+- `TODO:` software requirements. Python packages, using =`venv`:
+```bash
+$ python -m venv .venv
+$ source .venv/bin/activate
+$ pip install -r requirements.txt
+```
+
 - `TODO:` notes on cluster
 
 ## Repo structure
