@@ -1,0 +1,40 @@
+anytree==2.8.0
+attrs==21.4.0
+certifi==2021.10.8
+charset-normalizer==2.0.10
+cycler==0.11.0
+epc==0.0.5
+flake8==4.0.1
+flake8-docstrings==1.6.0
+fonttools==4.29.0
+graphviz==0.19.1
+gurobipy==9.5.0
+idna==3.3
+importmagic==0.1.7
+iniconfig==1.1.1
+kiwisolver==1.3.2
+matplotlib==3.5.1
+mccabe==0.6.1
+networkx==2.6.3
+numpy==1.22.1
+packaging==21.3
+pandas==1.4.0
+Pillow==9.0.0
+pluggy==1.0.0
+py==1.11.0
+pycodestyle==2.8.0
+pydocstyle==6.1.1
+pyflakes==2.4.0
+pyparsing==3.0.7
+pytest==6.2.5
+python-dateutil==2.8.2
+pytz==2021.3
+requests==2.27.1
+scipy==1.7.3
+seaborn==0.11.2
+sexpdata==0.0.3
+six==1.16.0
+snowballstemmer==2.2.0
+toml==0.10.2
+urllib3==1.26.8
+yapf==0.32.0
